networking/iptables.rules
# Generated by iptables-save v1.6.0 on Fri Feb  2 14:40:23 2018
*nat
:PREROUTING ACCEPT [398:32228]
:INPUT ACCEPT [3:252]
:OUTPUT ACCEPT [220:16776]
:POSTROUTING ACCEPT [349:24556]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.20.0.0/16 ! -o br-5deaa30e5513 -j MASQUERADE
-A POSTROUTING -s 172.99.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.19.0.0/16 ! -o br-fa7ae16edaba -j MASQUERADE
-A POSTROUTING -s 172.98.0.0/16 ! -o br-3073fdf0ac38 -j MASQUERADE
-A POSTROUTING -s 172.98.0.4/32 -d 172.98.0.4/32 -p tcp -m tcp --dport 1080 -j MASQUERADE
-A POSTROUTING -s 172.98.0.3/32 -d 172.98.0.3/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A POSTROUTING -s 172.98.0.5/32 -d 172.98.0.5/32 -p tcp -m tcp --dport 8118 -j MASQUERADE
-A DOCKER -i br-5deaa30e5513 -j RETURN
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-fa7ae16edaba -j RETURN
-A DOCKER -i br-3073fdf0ac38 -j RETURN
-A DOCKER ! -i br-3073fdf0ac38 -p tcp -m tcp --dport 1080 -j DNAT --to-destination 172.98.0.4:1080
-A DOCKER ! -i br-3073fdf0ac38 -p tcp -m tcp --dport 9880 -j DNAT --to-destination 172.98.0.3:80
-A DOCKER ! -i br-3073fdf0ac38 -p tcp -m tcp --dport 8118 -j DNAT --to-destination 172.98.0.5:8118
COMMIT
# Completed on Fri Feb  2 14:40:23 2018
# Generated by iptables-save v1.6.0 on Fri Feb  2 14:40:23 2018
*filter
:INPUT ACCEPT [857:275927]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [865:122806]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -i wlp3s0 -j DROP
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o br-5deaa30e5513 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-5deaa30e5513 -j DOCKER
-A FORWARD -i br-5deaa30e5513 ! -o br-5deaa30e5513 -j ACCEPT
-A FORWARD -i br-5deaa30e5513 -o br-5deaa30e5513 -j ACCEPT
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o br-fa7ae16edaba -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-fa7ae16edaba -j DOCKER
-A FORWARD -i br-fa7ae16edaba ! -o br-fa7ae16edaba -j ACCEPT
-A FORWARD -i br-fa7ae16edaba -o br-fa7ae16edaba -j ACCEPT
-A FORWARD -o br-3073fdf0ac38 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-3073fdf0ac38 -j DOCKER
-A FORWARD -i br-3073fdf0ac38 ! -o br-3073fdf0ac38 -j ACCEPT
-A FORWARD -i br-3073fdf0ac38 -o br-3073fdf0ac38 -j ACCEPT
-A DOCKER -d 172.98.0.4/32 ! -i br-3073fdf0ac38 -o br-3073fdf0ac38 -p tcp -m tcp --dport 1080 -j ACCEPT
-A DOCKER -d 172.98.0.3/32 ! -i br-3073fdf0ac38 -o br-3073fdf0ac38 -p tcp -m tcp --dport 80 -j ACCEPT
-A DOCKER -d 172.98.0.5/32 ! -i br-3073fdf0ac38 -o br-3073fdf0ac38 -p tcp -m tcp --dport 8118 -j ACCEPT
-A DOCKER-ISOLATION -i br-fa7ae16edaba -o br-5deaa30e5513 -j DROP
-A DOCKER-ISOLATION -i br-5deaa30e5513 -o br-fa7ae16edaba -j DROP
-A DOCKER-ISOLATION -i docker0 -o br-5deaa30e5513 -j DROP
-A DOCKER-ISOLATION -i br-5deaa30e5513 -o docker0 -j DROP
-A DOCKER-ISOLATION -i br-3073fdf0ac38 -o br-5deaa30e5513 -j DROP
-A DOCKER-ISOLATION -i br-5deaa30e5513 -o br-3073fdf0ac38 -j DROP
-A DOCKER-ISOLATION -i br-fa7ae16edaba -o docker0 -j DROP
-A DOCKER-ISOLATION -i docker0 -o br-fa7ae16edaba -j DROP
-A DOCKER-ISOLATION -i br-3073fdf0ac38 -o docker0 -j DROP
-A DOCKER-ISOLATION -i docker0 -o br-3073fdf0ac38 -j DROP
-A DOCKER-ISOLATION -i br-3073fdf0ac38 -o br-fa7ae16edaba -j DROP
-A DOCKER-ISOLATION -i br-fa7ae16edaba -o br-3073fdf0ac38 -j DROP
-A DOCKER-ISOLATION -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Fri Feb  2 14:40:23 2018
